# sdpa-experiment

./: .gitignore  Makefile  main.py  multi_head.yaml  pyproject.toml  run.sh  sdpa.yaml
configs/mha/: extreme_scale_factors.yaml  fine_grained_around_one.yaml  fine_grained_low_scale.yaml  high_scale_factors.yaml  logarithmic_scale.yaml
configs/sdpa/: extreme_scale_factors.yaml  fine_grained_around_one.yaml  fine_grained_low_scale.yaml  high_scale_factors.yaml  logarithmic_scale.yaml
sdpa/: __init__.py
sdpa/attention/: __init__.py  base.py  factory.py  manager.py  multi_head.py  scaled_dot_product.py
sdpa/config/: settings.py
sdpa/experiments/: api.py  config.py  experiment.py  results_manager.py  runner.py  visualization.py
sdpa/utils/: data_generation.py  decorators.py  math_utils.py  types.py
sdpa/visualization/: heatmap.py
tests/attention/: test_factory.py  test_manager.py  test_multi_head_attention.py  test_scaled_dot_product.py
tests/experiments/: test_api.py  test_results_manager.py
tests/utils/: test_data_generation.py  test_types.py
