[tool.poetry]
name = "sdpa"
version = "0.1.0"
description = "Scaled Dot-Product Attention Experiment"
authors = ["camille-004 <dunningcamille@gmail.com>"]
readme = "README.md"
packages = [{include = "sdpa"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
numpy = "^2.1.1"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
mypy = "^1.10.0"
pre-commit = "^3.7.1"

[tool.ruff]
line-length = 79
lint.select = ["E", "F", "I", "A", "C"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
